--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "angular-datatables": "latest",
+    "bootstrap": "^4.4.1",
     "rxjs": "~6.5.4",
+    "schematics-utilities": "^2.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
